--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,7 +4,7 @@
     "moduleResolution": "node",
     "target": "ES2020",
     "outDir": "./dist/server",
-    "rootDir": "./",
+    "rootDir": "./server",
     "lib": ["ES2020"],
     "types": ["node"],
     "esModuleInterop": true,
