--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,8 +3,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "target": "ES2020",
-    "outDir": "./dist/server",
-    "rootDir": "./server",
+    "outDir": "./dist",
     "lib": ["ES2020"],
     "types": ["node"],
     "esModuleInterop": true,
